--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 
-<style>
-    #image {
-        max-width: 100%;
-        height: auto;
-        text-align: center;
-    }
-</style>
+<html>
 
-<main id="main">
+<head>
+    <style>
+        #image {
+            max-width: 100%;
+            height: auto;
+            text-align: center;
+        }
+    </style>
+</head>
 
-    <h1 id="title">Kurt Cobain</h1>
 
-    <div id="img-div">
-        <img-div>
+<body>
 
-            <img id="image" src="https://bit.ly/3sUxnH6" alt="Kurt Cobain with guitar">
-            <figcaption id="img-caption">Kurt Cobain playing guitar</figcaption>
+    <div id="main">
 
-        </img-div>
+        <h1 id="title">Kurt Cobain</h1>
+
+        <div id="img-div">
+            <img-div>
+
+                <img id="image" src="https://bit.ly/3sUxnH6" alt="Kurt Cobain with guitar">
+                <figcaption id="img-caption">Kurt Cobain playing guitar</figcaption>
+
+            </img-div>
+
+        </div>
+
+        <p id="tribute-info">Kurt Cobain was a grunge rock musician who died at the height of his fame in 1994.</p>
+
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Kurt_Cobain" target="_blank">Kurt Cobain's Wikipedia
+            article</a>
+
 
     </div>
+</body>
 
-    <p id="tribute-info">Kurt Cobain was a grunge rock musician who died at the height of his fame in 1994.</p>
-
-    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Kurt_Cobain" target="_blank">Kurt Cobain's Wikipedia
-        article</a>
-
-
-</main>
+</html>
