--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="img-div">
             <img-div>
 
-                <img id="image" src="https://bit.ly/3sUxnH6" alt="Kurt Cobain with guitar">
+                <img id="image" src="original-kurt-cobain-jpg-7b4c2b24.jpg" alt="Kurt Cobain with guitar">
                 <figcaption id="img-caption">Kurt Cobain playing guitar</figcaption>
 
             </img-div>
